# el7008-HW1

HistCode/: CMakeLists.txt  main_histeq.cpp
T1Code/: CMakeLists.txt  main_conv.cpp
tarea_1_src_alumnos/: Pauta tarea 1 2018 v01.docx  Tarea1-2018.docx
tarea_1_src_alumnos/src_alumnos/src_conv/: CMakeLists.txt  main_conv.cpp
tarea_1_src_alumnos/src_alumnos/src_histeq/: CMakeLists.txt  main_histeq.cpp
